# comms-sdk

./: .gitignore  .gitmodules  README.md
c#/: CommsSdk.sln  EgoSmsSdk.sln  README.md
c#/src/: CommsSdk.csproj
c#/src/v1/: CommsSdk.cs
c#/src/v1/models/: ApiRequest.cs  ApiResponse.cs  ApiResponseCode.cs  MessageModel.cs  MessagePriority.cs  UserData.cs
c#/src/v1/utils/: NumberValidator.cs  Validator.cs
c#/tests/: CommsSdkTests.cs  NumberValidatorTests.cs  tests.csproj
dart/: LICENSE  README.md  pubspec.yaml
dart/lib/: comms_sdk.dart
dart/lib/src/v1/: comms_sdk.dart
dart/test/: comms_sdk_test.dart  number_validator_test.dart
java/: README.md  pom.xml
js/: README.md  package.json  pnpm-lock.yaml  tests.bat  tsconfig.json
js/src/: index.ts
js/src/v1/: CommsSDK.ts  EgoSmsSDK.ts  index.ts
js/src/v1/models/: ApiRequest.ts  ApiResponse.ts  UserData.ts  (+3 more)
js/tests/v1/: CommsSDK.test.ts
kotlin/: .gitignore  README.md  build.gradle  settings.gradle
python/: .gitignore  README.md  build_and_upload.bat  pyproject.toml
python/src/comms_sdk/: __init__.py
python/tests/v1/: real_test.py  sdk_test.py  validator_test.py
ruby/: Gemfile  README.md  build_and_upload.sh  comms_sdk.gemspec  tests.bat
ruby/lib/: comms_sdk.rb
ruby/lib/comms_sdk/: version.rb
ruby/sig/: comms_sdk.rbs
ruby/spec/: comms_sdk_spec.rb  live_api_test.rb  run_tests.rb  spec_helper.rb
ruby/spec/integration/: full_workflow_spec.rb
rust/: Cargo.toml  README.md
rust/src/: lib.rs  models.rs  utils.rs
rust/src/v1/: mod.rs  models.rs  sdk.rs  utils.rs
rust/tests/: sdk_test.rs
(+55 files in other folders)
